--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,12 @@
 {
     "files.associations": {
         "uartdriver.h": "c",
-        "protocol.h": "c"
+        "protocol.h": "c",
+        "nodes.h": "c",
+        "easynextionlibrary.h": "c",
+        "display.h": "c",
+        "calltriggers.h": "c",
+        "uart.h": "c",
+        "freertos.h": "c"
     }
 }
